fix: :sparkles: Fix issue 103: Styles of select on rep modal
Add plugin nice-select2, implement plugin on modal selects, add styles for options and scrollbar

--- a/src/styles/components/_request-rep-modal.scss
+++ b/src/styles/components/_request-rep-modal.scss
@@ -128,6 +128,66 @@
             }
         }
     }
+
+    .nice-select {
+        font-size: 1.125rem;
+        font-weight: 300;
+
+        &-dropdown {
+            width: 100%;
+        }
+
+        .option {
+            font-weight: 300;
+            text-align: center;
+
+            &.disabled {
+                display: none;
+            }
+
+            &.focus,
+            &:hover {
+                background-color: $color-soft-gray;
+                color: $color-dark-gray;
+                font-weight: 500;
+            }
+
+            &.selected {
+                background-color: $color-dark-green !important;
+                color: $color-white;
+            }
+        }
+    }
+
+    #specialty + .nice-select {
+
+        .list {
+            overflow-y: scroll;
+            scrollbar-width: thin;
+            scrollbar-color: rgba($color-dark-pink, 1) $color-bright-gray;
+
+            &:hover {
+                scrollbar-color: rgba($color-dark-pink, 0.5) $color-bright-gray;
+            }
+
+            &::-webkit-scrollbar {
+                width: 8px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: $color-bright-gray;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: rgba($color-dark-pink, 1);
+                border-radius: 4px;
+            }
+
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: rgba($color-dark-pink, 0.5);
+            }
+        }
+    }
 }
 
 .request-a-rep__content .form {
